kubernetes/apps/botamusique/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: botamusique
spec:
  selector:
    app: botamusique
  ports:
    - protocol: TCP
      port: 8181
