kubernetes/apps/botamusique/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: botamusique
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - botamusique.immortalkeep.com
      secretName: botamusique-ingress-tls
  rules:
    - host: botamusique.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: botamusique
                port:
                  number: 8181
